fixed colors and added adop gap

--- a/css/style.css
+++ b/css/style.css
@@ -5,7 +5,7 @@ html, body, div, span, fieldset, form, label {
     font-size: 100%;
     font: inherit;
     vertical-align: baseline;
-    background-color: rgba(241, 54, 8, 1);
+    /* background-color: rgba(241, 54, 8, 1); */
 }
 
 html {
@@ -34,19 +34,18 @@ html {
 }
 
 .quiet {
-    /* color: #7f7f7f;
-    color: rgba(0, 0, 0, .5); */
-    background-color: rgba(7, 41, 192, 1);
+    color: rgba(0, 0, 0, .5);
+    /* background-color: rgba(7, 41, 192, 1); */
 }
 
 .fill-darken2 {
-    /* background: rgba(0, 0, 0, 0.50); */
-    background-color: rgb(48, 77, 240);
+    background: rgba(0, 0, 0, 0.50);
+    /* background-color: rgb(48, 77, 240); */
 }
 
 .fill-darken1 {
-    /* background: rgba(0, 0, 0, 0.25); */
-    background-color: rgb(108, 3, 245);
+    background: rgba(0, 0, 0, 0.25);
+    /* background-color: rgb(108, 3, 245); */
 }
 
 .button {
@@ -64,7 +63,7 @@ html {
     text-overflow: ellipsis;
     /* Protects button metrics in .prose context */
     font-family: 'Verdana', sans-serif;
-    font-weight: 700;
+    font-weight: 500;
     line-height: 20px;
     font-size: 12px;
     -webkit-appearance: none;
@@ -73,8 +72,8 @@ html {
 }
 
 .button.fill-darken2.active, .button.fill-darken2:hover {
-    /* background-color: rgba(0, 0, 0, 0.75); */
-    background-color: rgba(206, 13, 245, 1);
+    background-color: rgba(0, 0, 0, 0.75);
+    /* background-color: rgba(206, 13, 245, 1); */
 }
 
 .icon::before {
@@ -106,7 +105,7 @@ html {
     font-size: small;
     padding: 3px; 
     content: "\f0c9";
-    background-color: rgba(216, 230, 26, 1);
+    /* background-color: rgba(216, 230, 26, 1); */
 }
 
 .icon.close::before {
@@ -115,7 +114,7 @@ html {
     font-size: small;
     padding: 3px;
     content: "\f00d";
-    background-color: rgba(85, 228, 29, 1);
+    /* background-color: rgba(85, 228, 29, 1); */
 }
 
 /* Markup free clearing
@@ -123,7 +122,7 @@ html {
 
 .clearfix {
     display: block;
-    background-color: rgb(19, 224, 207);
+    /* background-color: rgb(19, 224, 207); */
 }
 
 .clearfix::after {
@@ -132,7 +131,7 @@ html {
     height: 0;
     clear: both;
     visibility: hidden;
-    background-color: rgb(224, 19, 162);
+    /* background-color: rgb(224, 19, 162); */
 }
 
 /* Checkbox pill - use in conjunction with pill + button
@@ -143,24 +142,24 @@ html {
 }
 
 .checkbox-pill input[type=checkbox]+*::before {
-    /* background-color: rgba(0, 0, 0, 0.25); */
-    background-color: rgb(224, 210, 19);
+    background-color: rgba(0, 0, 0, 0.5);
+    /* background-color: rgb(224, 210, 19); */
     border-radius: 2px;
 }
 
 .checkbox-pill input[type=checkbox]:not(:checked)+*::before {
     content: '';
-    background-color: rgb(9, 127, 136);
+    /* background-color: rgb(9, 127, 136); */
 }
 
 .checkbox-pill input[type=checkbox]:checked+.button.quiet {
-    /* background-color: rgba(0, 0, 0, .5); */
-    background-color: rgb(247, 7, 227);
+    background-color: rgba(0, 0, 0, .5);
+    /* background-color: rgb(247, 7, 227); */
 }
 
 .dark.checkbox-pill input[type=checkbox]:checked+.button.quiet, .dark .checkbox-pill input[type=checkbox]:checked+.button.quiet {
-    /* background-color: rgba(255, 255, 255, 0.25); */
-    background-color: rgba(27, 233, 38,1);
+    background-color: rgba(255, 255, 255, 0.25);
+    /* background-color: rgba(27, 233, 38,1); */
 }
 
 .icon.check:before {
@@ -170,11 +169,13 @@ html {
     font-size: small;
     padding: 3px;
     content: "\f00c";
-    background-color: rgba(221, 122, 29, 1);
+    /* background-color: rgba(221, 122, 29, 1); */
 }
 
 .col12 {
     width: 100%;
     display: block;
-    background-color: rgba(214, 11, 129, 1);
+    /* this is temp fix. background-color shouldn't be here */
+    background-color: rgba(0, 0, 0, .5);
+    /* background-color: rgba(214, 11, 129, 1); */
 }
